--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <tr>
             <th class=headline>Vollst&aumlndiger Name des Probanden</th>
             <th></th>
-            <th class=light>Kotlors, Julia</th>
+            <th class=light>Schneider, Philip</th>
         </tr>
         <tr>
             <th class=smalllight>full name of proband</th>
