--- a/fr24092021.html
+++ b/fr24092021.html
@@ -68,7 +68,7 @@
         <tr>
             <th class=headline>Vollst&aumlndiger Name des Probanden</th>
             <th></th>
-            <th class=light>Schneider, Philip</th>
+            <th class=light>Kotlors, Julia</th>
         </tr>
         <tr>
             <th class=smalllight>full name of proband</th>
@@ -92,12 +92,12 @@
             <tr>
                 <th class=headline>Testzeitpunkt</th>
                 <th></th>
-                <th class=light>18.09.2021 18:31:31 (24h)</th>
+                <th class=light>24.09.2021 17:31:31 (24h)</th>
             </tr>
             <tr>
                 <th class=smalllight>time of sampling</th>
                 <th></th>
-                <th class=smalllight>2021-09-18 11:31:31 (24h)</th>
+                <th class=smalllight>2021-09-24 17:31:31 (24h)</th>
             </tr>
         </table>
             <hr>
